# OddsHarvester

./: .gitignore  Dockerfile  README.md  ShadCN-context.md  baseball_odds_enhancement_plan.md  codebase_review.md  gui_development_plan.md  package-lock.json  pyproject.toml  requirements.txt  scraped_data.csv  serverless.yaml  uv.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: run_unit_tests.yml  scraper_health_check.yml
memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
odds_harvester_gui/backend/: main.py
odds_harvester_gui/frontend/: package-lock.json  package.json  tailwind.config.ts
scraped_data/: historic_odds_baseball_mlb_2024.csv
src/: comparateur_de_cotes_scraper.py  data_storage.py  lambda_handler.py  local_data_storage.py  logger.py  main.py  odds_portal_odds_extractor.py  odds_portal_scrapper.py  remote_data_storage.py  utils.py
src/cli/: __init__.py  arguments.py  cli_argument_handler.py  cli_argument_parser.py  cli_argument_validator.py  cli_help_message_generator.py
src/core/: base_scraper.py  browser_helper.py  odds_portal_market_extractor.py  odds_portal_odds_extractor.py  odds_portal_scraper.py  odds_portal_scrapper.py  over_under_market.py  playwright_manager.py  scraper.py  scraper_app.py  sport_market_registry.py  url_builder.py
src/storage/: local_data_storage.py  remote_data_storage.py  storage_format.py  storage_manager.py  storage_type.py
tests/: test_cli_argument_handler.py  test_cli_arguments_parser.py  test_utils.py  test_website_layout.py
(+35 files in other folders)
